apps/healthview-cardiomegaly-cnn/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cardiomegaly-frontend
  namespace: healthview-cardiomegaly-cnn
  labels:
    app: cardiomegaly-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: cardiomegaly-frontend
  template:
    metadata:
      labels:
        app: cardiomegaly-frontend
    spec:
      
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: cardiomegaly-frontend
          image: ghcr.io/curatimexai/healthview-cardiomegaly-cnn-frontend:d83c1d3f4233b6ba308c02128a75c9bdb9b196bd
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
