apps/healthview-cardiomegaly-cnn/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cardiomegaly-backend-service
  namespace: healthview-cardiomegaly-cnn
spec:
  selector:
    app: cardiomegaly-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
